# libddp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  testDDP.cpp
include/libddp/: ddp-impl.h  ddp.h
